fix bus timetable alignment
Stadtwerke Münster now serves the next five instead of just two departures, which resulted in the bus timetable hiding some of the news. Pushed timetable and clock up by about 100px so that everything should fit on the screen nicely.

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body {
 #uhr {
 	position: absolute;
 	left: 500px;
-	top: 120px;
+	top: 50px;
 	font-size: 65px;
 }
 
@@ -68,7 +68,7 @@ body {
 	height: auto;
 	width: 400px;
 	left: 378px;
-	top: 255px;
+	top: 150px;
 	color: #fefefe;
 	background-color: #fefefe;
 	overflow: hidden;
